Improved camel-tinkerforge component